# Secura-2FAApp

./: .gitignore  README.md  nsis-3.zip.1  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  mod.rs  security.rs  totp.rs
src/components/: Footer.tsx  Help.tsx  Loading.tsx  Login.tsx  QRCodeDisplay.tsx  QrCodeScaner.tsx
src/components/Settings/: Export.tsx  HardReset.tsx  Import.tsx  Reset.tsx  Settings.tsx
src/components/ToTp/: ToTpCreate.tsx  ToTpDelete.tsx  ToTpEdit.tsx  ToTpExport.tsx  ToTpModal.tsx
src/components/ui/: input-otp.tsx
src/types/: default.ts  totp.ts
src/types/callbacks/: accounts.ts  default.ts  qrcode.ts
src/utils/: database.ts  default.ts  qrScan.ts  totp.ts
