[package]
name = "secura"
version = "0.2.0"
description = "Secura is a free open-source authenticator app for desktop and mobile devices."
authors = ["xyzjesper"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secura"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-opener = "2.5.2"
serde_json = "1.0.145"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
totp-rs = { version = "5.7.0", features = ["otpauth", "qr", "gen_secret"] }
tauri-plugin-barcode-scanner = "2.4.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.4"
base64 = "0.22.1"
aes-gcm = "0.10.3"
tauri-plugin-dialog = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
simple_crypt = "0.2.3"
clang = "2.0.0"
clang-sys = "1.8.1"
